# agate

./: .dockerignore  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  release.sh
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  release.sh  release.yml  rust.yml  test.yml
content/: index.gmi  libraries
src/: certificates.rs  codes.rs  lib.rs  main.rs  metadata.rs
tests/: LICENSE-GPL.md  README.md  cert.pem  key.pem  key.rsa  tests.rs
tests/data/: directory_traversal.gmi  key.rsa
tests/data/.certificates/: cert.pem
tests/data/cert_missing/: key.der
tests/data/content/: index.gmi  symlink.gmi  symlinked_dir  test.gmi
tests/data/content/example.com/: index.gmi
tests/data/content/example.org/: index.gmi
tests/data/dirlist-preamble/: .directory-listing-ok
tests/data/key_missing/: cert.der
tests/data/multicert/: ca_cert.pem  ca_key.rsa  create_certs.sh
tests/data/multicert/example.com/: cert.der  cert.pem  key.der  key.rsa
tests/data/multicert/example.org/: cert.der  cert.pem  key.der  key.rsa
tests/data/symlinked_dir/: file.gmi
tools/: README.md
tools/debian/: README.md  gemini.conf  gemini.service  geminilogs  install.sh  uninstall.sh
tools/docker/: Dockerfile  README.md  agate.x86_64-unknown-linux-gnu  entrypoint.sh  start.sh
tools/freebsd/: startup.sh
