[package]
name = "agate"
version = "3.2.4"
authors = ["Matt Brubeck <mbrubeck@limpet.net>", "Johann150 <johann+agate@qwertqwefsday.eu>"]
description = "Very simple server for the Gemini hypertext protocol"
keywords = ["server", "gemini", "hypertext", "internet", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/mbrubeck/agate"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
exclude = ["/tools", "/.github", "/Cross.toml", "/content", "/CODE_OF_CONDUCT.md", "/CONTRIBUTING.md", "/CHANGELOG.md", "/tests"]

[dependencies]
configparser = "3.0"
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime", "termcolor"] }
futures-util = "0.3"
getopts = "0.2.21"
glob = "0.3"
log = "0.4"
mime_guess = "2.0"
once_cell = "1.16"
percent-encoding = "2.2"
rcgen = { version = "0.10.0" }
rustls = "0.20.7"
tokio-rustls = "0.23.4"
tokio = { version = "1.22", features = ["fs", "io-util", "net", "rt-multi-thread", "sync"] }
url = "2.3.1"
webpki = "0.22.0"

[dev-dependencies]
anyhow = "1.0"
gemini-fetch = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
