[package]
name = "agate"
version = "3.3.0"
authors = ["Matt Brubeck <mbrubeck@limpet.net>", "Johann150 <johann+agate@qwertqwefsday.eu>"]
description = "Very simple server for the Gemini hypertext protocol"
keywords = ["server", "gemini", "hypertext", "internet", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/mbrubeck/agate"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
exclude = ["/tools", "/.github", "/Cross.toml", "/content", "/CODE_OF_CONDUCT.md", "/CONTRIBUTING.md", "/CHANGELOG.md", "/tests"]

[dependencies]
configparser = "3.0"
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
futures-util = "0.3"
getopts = "0.2.21"
glob = "0.3"
log = "0.4"
mime_guess = "2.0"
once_cell = "1.18"
percent-encoding = "2.3"
rcgen = { version = "0.11.1" }
rustls = "0.21.5"
tokio-rustls = "0.24.1"
tokio = { version = "1.29", features = ["fs", "io-util", "net", "rt-multi-thread", "sync"] }
url = "2.4.0"

[dev-dependencies]
anyhow = "1.0"
gemini-fetch = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
