[package]
name = "agate"
version = "3.3.7"
authors = ["Matt Brubeck <mbrubeck@limpet.net>", "Johann150 <johann+agate@qwertqwefsday.eu>"]
description = "Very simple server for the Gemini hypertext protocol"
keywords = ["server", "gemini", "hypertext", "internet", "protocol"]
categories = ["network-programming"]
repository = "https://github.com/mbrubeck/agate"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["/tools", "/.github", "/Cross.toml", "/content", "/CODE_OF_CONDUCT.md", "/CONTRIBUTING.md", "/CHANGELOG.md", "/tests"]

[dependencies]
configparser = "3.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
futures-util = "0.3"
getopts = "0.2.21"
glob = "0.3"
log = "0.4"
mime_guess = "2.0"
once_cell = "1.19"
percent-encoding = "2.3"
rcgen = { version = "0.13.0", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "ring", "tls12"] }
tokio = { version = "1.37", features = ["fs", "io-util", "net", "rt-multi-thread", "sync"] }
url = "2.5.0"

[dev-dependencies]
trotter = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
